# smallm-engine

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md
include/smallm/: gguf.h  ops.h  tensor.h
include/smallm/backend/: cpu_backend.h
include/smallm/backend/common/: backend.h
include/smallm/config/: llama_config.h  qwen2_config.h
include/smallm/config/common/: config.h  meta_read.h
include/smallm/core/: ops.h  tensor.h
include/smallm/core/common/: quant_common.h
include/smallm/model/: llama_model.h  qwen2_model.h
include/smallm/model/common/: kv_cache.h  model.h
include/smallm/runtime/: generation_stats.h  generator.h
include/smallm/runtime/sampler/: greedy_sampler.h  temperature_sampler.h  top_k_sampler.h  top_p_sampler.h
include/smallm/runtime/sampler/common/: sampler.h
include/smallm/tokenizer/: bpe_tokenizer.h  sp_tokenizer.h
include/smallm/tokenizer/common/: tokenizer.h
src/: gguf.cpp  main.cpp  ops.cpp  tensor.cpp
src/backend/: cpu_backend.cpp
src/config/: llama_config.cpp  qwen2_config.cpp
src/config/common/: config.cpp
src/core/: gguf.cpp  ops.cpp  tensor.cpp
src/model/: llama_model.cpp  qwen2_model.cpp
src/runtime/: generation_stats.cpp  generator.cpp
src/runtime/sampler/: greedy_sampler.cpp  temperature_sampler.cpp  top_k_sampler.cpp  top_p_sampler.cpp
src/tokenizer/: bpe_tokenizer.cpp  sp_tokenizer.cpp  tokenizer_factory.cpp
